--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
 body{
   padding-top:80px;
   word-wrap:break-word;
-  background: white;
-  color: black;
+  background: rgb(135, 152, 192);
+  color: rgb(65, 69, 75);
   font-family: Arial, Helvetica, sans-serif;
 }
 img{
@@ -23,7 +23,6 @@ img{
 .col-sm-6 h3, h2{
   font-size: 30px;
   color:black;
-  font-family: 'Tiro Devanagari Marathi', serif;
 }
 .form input{
   height:30px;
